2005-08-14  Stuart Parmenter  <pavlov@pavlov.net>

	* src/cairo-win32-surface.c: (_cairo_win32_surface_fill_rectangles): 
	blue and green values were swapped in the DO_SOURCE case.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cairo_test_create_png_pattern): Rewrite to
	use cairo_image_surface_create_from_png rather than custom
	read_png_argb32. In addition to being simpler, this eliminates the
	leak of the image data buffer.
	
	* test/trap-clip.c: (set_gradient_pattern), (set_image_pattern):
	Add calls to cairo_pattern_destroy to close two memory leaks.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-pattern.c: (_cairo_pattern_acquire_surfaces): Fix up
	one more call to _cairo_pattern_release_surface missed in the
	previous commit.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-pattern.c: (_cairo_pattern_release_surface): Fix to
	accept a cairo_pattern_t rather than a cairo_surface_t as the
	primary argument.

	* src/cairo-image-surface.c: (_cairo_image_surface_composite),
	(_cairo_image_surface_composite_trapezoids): Track change in
	_cairo_pattern_release_surface and also pass the appropriate
	pattern for each acquired surface. The previous backend mismatch
	was causing memory leaks.

	* src/cairo-xlib-surface.c: (_get_image_surface): Remove stale
	comment.

	* test/xlib-surface.c: (main): Add missing fclose to keep valgrind
	happy about memory leaks.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cairo_test_expecting),
	(cairo_test_expect_failure), (cairo_test): Make the per-backend
	test results print XFAIL rather than FAIL for expected failures.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: (cairo_test_real): Fix comment describing
	test result. It's not enough that all tested backends are
	successful. We also require that at least one backend is actually
	tested.

2005-07-14  Carl Worth  <cworth@cworth.org>
